--- a/.github/workflows/rtr_syscollector.yml
+++ b/.github/workflows/rtr_syscollector.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: ./.github/actions/setup-python
         with:
           python-version-file: ".github/workflows/.python-version"
           architecture: x64
