--- a/.github/workflows/wazuh-template-elasticsearch.yml
+++ b/.github/workflows/wazuh-template-elasticsearch.yml
@@ -13,10 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v1
+      - name: Set up Python
+        uses: ./.github/actions/setup-python
         with:
-          python-version: 3.11
+          python-version-file: ".github/workflows/.python-version"
+          architecture: x64
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
