Adding a wrapper for actions/download-artifact

--- a/.github/workflows/windows-dll-hijack.yml
+++ b/.github/workflows/windows-dll-hijack.yml
@@ -61,12 +61,12 @@ jobs:
           python-version-file: ".github/workflows/.python-version"
           architecture: x64
       - name: Download Artifact executables
-        uses: actions/download-artifact@v3
+        uses: ./.github/actions/download-artifact
         with:
           name: executables
           path: C:\executables\
       - name: Download Artifact configuration files
-        uses: actions/download-artifact@v3
+        uses: ./.github/actions/download-artifact
         with:
           name: configuration
           path: C:\configuration_files\
