Adding a wrapper for actions/upload-artifact

--- a/.github/workflows/rtr_syscheck.yml
+++ b/.github/workflows/rtr_syscheck.yml
@@ -38,7 +38,7 @@ jobs:
           python build.py --target ${{ matrix.target }} --readytoreview ${{ matrix.module }}
       - name: Uploading coverage report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: ./.github/actions/upload-artifact
         with:
           name: coverage_report ${{ matrix.target }}
           path: ./**/coverage_report/**
