Update UTs for cti_url setting

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -35,6 +35,8 @@ if(NOT TARGET)
   message(FATAL_ERROR "No TARGET specified. Aborting...")
 elseif(${TARGET} STREQUAL "server")
   include("./server.cmake")
+  configure_file("config_files/test_global.conf" "wazuh_modules/vulnerability_detection/test_global.conf" COPYONLY)
+  configure_file("config_files/test_global_no_cti_url.conf" "wazuh_modules/vulnerability_detection/test_global_no_cti_url.conf" COPYONLY)
 elseif(${TARGET} STREQUAL "agent")
   include("./agent.cmake")
 elseif(${TARGET} STREQUAL "winagent")
