--- a/src/shared_modules/content_manager/testtool/CMakeLists.txt
+++ b/src/shared_modules/content_manager/testtool/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12.4)
 
+set(CMAKE_CXX_FLAGS_DEBUG "-g -fsanitize=address,leak,undefined")
+
 project(content_manager_test_tool)
 
 enable_testing()
