Auto referencing workflows in the trigger list

--- a/.github/workflows/wazuh-template-elasticsearch.yml
+++ b/.github/workflows/wazuh-template-elasticsearch.yml
@@ -7,6 +7,7 @@ on:
   push:
     paths:
       - "extensions/elasticsearch/7.x/**"
+      - ".github/workflows/wazuh-template-elasticsearch.yml"
 
 jobs:
   wazuh-template-elasticsearch:
