Add mock in api-kvdb UT.

--- a/src/engine/source/api/CMakeLists.txt
+++ b/src/engine/source/api/CMakeLists.txt
@@ -49,6 +49,8 @@ target_link_libraries(api
     fmt
     json
     kvdb
+    kvdb::ikvdb
+    kvdb::mocks
     metrics
     router
     store::fileDriver
