--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,7 @@ link_directories(${SRC_FOLDER}/external/rocksdb/build/)
 link_directories(${SRC_FOLDER}/external/openssl/)
 link_directories(${SRC_FOLDER}/external/lzma/build/)
 link_directories(${SRC_FOLDER}/external/zlib/)
+link_directories(${SRC_FOLDER}/external/zlib/contrib/minizip/)
 
 add_subdirectory(external/benchmark EXCLUDE_FROM_ALL)
 add_subdirectory(external/googletest EXCLUDE_FROM_ALL)
@@ -91,6 +92,7 @@ include_directories(${SRC_FOLDER}/external/googletest/googlemock/include)
 include_directories(${SRC_FOLDER}/external/openssl/include)
 include_directories(${SRC_FOLDER}/external/lzma/src/liblzma/api)
 include_directories(${SRC_FOLDER}/external/zlib/)
+include_directories(${SRC_FOLDER}/external/zlib/contrib/)
 
 add_subdirectory(shared_modules/utils)
 add_subdirectory(shared_modules/router)
