--- a/api/test/integration/test_manager_endpoints.tavern.yaml
+++ b/api/test/integration/test_manager_endpoints.tavern.yaml
@@ -90,7 +90,8 @@ marks:
        - sca
        - syscheck
        - syscollector
-       - vulnerability-detector
+       - vulnerability-detection
+       - indexer
 
 stages:
 
@@ -160,7 +161,8 @@ stages:
               sca: !anything
               syscheck: !anything
               syscollector: !anything
-              vulnerability-detector: !anything
+              vulnerability-detection: !anything
+              indexer: !anything
           failed_items: []
           total_affected_items: 1
           total_failed_items: 0
